// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`roster progress bar renders successfully for non-offender 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="progress"
        style="height: 60px;"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="progress-bar success"
          role="progressbar"
          style="width: 50%;"
        >
          Under the Tax
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="progress-bar warning"
          role="progressbar"
          style="width: 0%;"
        >
          $
          -10
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="progress-bar penalty"
          role="progressbar"
          style="width: 0%;"
        >
          $
          -10
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="progress"
      style="height: 60px;"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="progress-bar success"
        role="progressbar"
        style="width: 50%;"
      >
        Under the Tax
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="progress-bar warning"
        role="progressbar"
        style="width: 0%;"
      >
        $
        -10
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="progress-bar penalty"
        role="progressbar"
        style="width: 0%;"
      >
        $
        -10
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`roster progress bar renders successfully for offender 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="progress"
        style="height: 60px;"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="55"
          class="progress-bar success"
          role="progressbar"
          style="width: 55.00000000000001%;"
        >
          Under the Tax
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="10"
          class="progress-bar warning"
          role="progressbar"
          style="width: 10%;"
        >
          $
          20
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="10"
          class="progress-bar penalty"
          role="progressbar"
          style="width: 10%;"
        >
          $
          20
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="progress"
      style="height: 60px;"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="55"
        class="progress-bar success"
        role="progressbar"
        style="width: 55.00000000000001%;"
      >
        Under the Tax
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="progress-bar warning"
        role="progressbar"
        style="width: 10%;"
      >
        $
        20
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="progress-bar penalty"
        role="progressbar"
        style="width: 10%;"
      >
        $
        20
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
